Bug 298940 - don't add color to advanced color selector if eraser mode is on
Summary: don't add color to advanced color selector if eraser mode is on
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-27 21:58 UTC by Tom Hall
Modified: 2012-05-08 09:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Hall 2012-04-27 21:58:25 UTC
If eraser mode is on, the foreground color isn't being used when the brush is on the canvas. However, it still gets added to the Advanced Color Selector's Color History Color Patches.

Reproducible: Always

Steps to Reproduce:
1. Select a new color
2. Turn on eraser mode
3. Do some erasing
Actual Results:  
the selected color is added to the advanced color selector's color history

Expected Results:  
I haven't actually painted with the color, so no need to clutter up the ACS color history with it.

I'm not aware of any way in which eraser mode uses the foreground color. If it does, I guess this bug is invalid.
Comment 1 Halla Rempt 2012-05-08 09:06:17 UTC
Git commit 8cb4132fd60bad0769605ce15b7dc4094b7ccb19 by Boudewijn Rempt.
Committed on 08/05/2012 at 11:00.
Pushed by rempt into branch 'master'.

Don't add colors to the history while erasing

We probably have multiple color history implementations in Krita though,
those really should be squashed together.

M  +5    -0    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_history.cpp
M  +3    -1    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_history.h

http://commits.kde.org/calligra/8cb4132fd60bad0769605ce15b7dc4094b7ccb19