Don't add colors to the history while erasing

BUG:298940

We probably have multiple color history implementations in Krita though,
those really should be squashed together.